--- a/app/apks/apks.list.html
+++ b/app/apks/apks.list.html
@@ -43,7 +43,7 @@
 						  </p>
 					   </td>
 					   <td class="b0 wd-xs">
-						  <a href="#">
+						  <a href="/apks/{{ apk.sha256 }}">
 						  	  <img src="assets/img/dummy.png" alt="" class="img-responsive thumb64" ng-hide="apk.image">
 							  <img ng-src="{{ apk.image }}" alt="" class="img-responsive thumb64" ng-show="apk.image">
 						  </a>
