missing images added

--- a/app/static_views/about.html
+++ b/app/static_views/about.html
@@ -18,7 +18,7 @@
 				<div class="col-lg-12 pr-xl">
 					<img class="img-responsive thumbnail" src="assets/img/analyst_panel.png" alt="">
 					<div style="position: absolute;right: -10%;top: 17%;width: 26.6%;">
-						<img src="/static/landing/img/mobile.png" alt="" style="width: 350px;">
+						<img src="assets/img/mobile.png" alt="" style="width: 350px;">
 					</div>
 				</div>
 				<div class="clearfix"></div>
@@ -32,11 +32,11 @@
 
 					<div class="row text-center" style="margin-top: 50px;">
 						<a href="http://koodous.en.uptodown.com/android" target=_blank>
-							<img alt="Get Koodous on UptoDown" src="/static/landing/img/uptodown.png">
+							<img alt="Get Koodous on UptoDown" src="assets/img/uptodown.png">
 						</a>
 						&nbsp;
 						<a href="https://play.google.com/store/apps/details?id=com.koodous.android" target=_blank>
-							<img alt="Get Koodous on Google Play" style="height:67px;" src="/static/landing/img/google-play-badge.png">
+							<img alt="Get Koodous on Google Play" style="height:67px;" src="assets/img/google-play-badge.png">
 						</a>
 					</div>
 				</div>
@@ -186,7 +186,7 @@
 				<div class="row">
 					<div class="pull-left col-md-6">
 						<a href="http://www.nemesys-project.eu/nemesys/" class="text-info">
-							<img src="static/landing/img/logo_nemesys.png" alt="nemesys" class="mt-xl" style="width:300px; display:block; margin:auto;">
+							<img src="assets/img/logo_nemesys.png" alt="nemesys" class="mt-xl" style="width:300px; display:block; margin:auto;">
 						</a>
 					</div>
 					<div class="pull-right col-md-6">
@@ -204,7 +204,7 @@
 				<div class="row mt-xl">
 					<div class="pull-left col-md-6">
 						<a href="http://plusvic.github.io/yara/" class="text-info">
-							<img src="/static/landing/img/yara.png" alt="Yara" class="mt-xl" style="width:300px; display:block; margin:auto;">
+							<img src="assets/img/yara.png" alt="Yara" class="mt-xl" style="width:300px; display:block; margin:auto;">
 						</a>
 					</div>
 
@@ -221,7 +221,7 @@
 				<div class="row mt-xl">
 					<div class="pull-left col-md-6">
 						<a href="http://www.uptodown.com/" class="text-info">
-							<img src="static/landing/img/uptodownlogo.png" class="mt-xl" alt="Uptodown" style="width:300px; display:block; margin:auto;">
+							<img src="assets/img/uptodownlogo.png" class="mt-xl" alt="Uptodown" style="width:300px; display:block; margin:auto;">
 						</a>
 					</div>
 
@@ -242,22 +242,22 @@
 				<!-- <h3 style="margin-bottom:52px; text-decoration:underline" class="text-center">Analysis</h3> -->
 				<div class="col-md-6">
 					<a href="http://plusvic.github.io/yara/">
-						<img class="media-object" src="/static/landing/img/yara.png" alt="Yara" style="width: 150px;">
+						<img class="media-object" src="assets/img/yara.png" alt="Yara" style="width: 150px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="padding-left:40px;">
 					<a href="https://github.com/pjlantz/droidbox">
-						<img class="media-object" src="/static/landing/img/droidbox.jpg" alt="DroidBox" style="width: 80px;">
+						<img class="media-object" src="assets/img/droidbox.jpg" alt="DroidBox" style="width: 80px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="margin-top:40px;">
 					<a href="http://www.cuckoosandbox.org/">
-						<img class="media-object" src="/static/landing/img/cuckoo.png" alt="Cuckoo" style="width: 101px;">
+						<img class="media-object" src="assets/img/cuckoo.png" alt="Cuckoo" style="width: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="margin-top:40px;">
 					<a href="https://github.com/androguard/androguard">
-						<img class="media-object" src="/static/landing/img/androguard.png" alt="Androguard" style="width: 101px;">
+						<img class="media-object" src="assets/img/androguard.png" alt="Androguard" style="width: 101px;">
 					</a>
 				</div>
 			</div>
@@ -265,22 +265,22 @@
 				<!-- <h3 class="text-center" style="text-decoration:underline; margin-bottom:35px;">Frameworks</h3> -->
 				<div class="col-md-6" style="padding-left:0; padding-right:0;">
 					<a href="https://www.djangoproject.com/">
-						<img src="/static/landing/img/djangopy.jpg" alt="Django" style="width: 101px;">
+						<img src="assets/img/djangopy.jpg" alt="Django" style="width: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="padding-left:0;">
 					<a href="http://www.django-rest-framework.org/">
-						<img src="/static/landing/img/drf3.jpg" alt="Django Rest Framework" style="height: 101px;">
+						<img src="assets/img/drf3.jpg" alt="Django Rest Framework" style="height: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="padding-left:0; margin-top:20px;">
 					<a href="https://angularjs.org/">
-						<img class="media-object" src="/static/landing/img/angularjs.png"  alt="AngularJS" style="width: 101px;">
+						<img class="media-object" src="assets/img/angularjs.png"  alt="AngularJS" style="width: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="padding-left:0; margin-top:20px;">
 					<a href="http://getbootstrap.com/">
-						<img class="media-object" src="/static/landing/img/bootstrap.png" alt="Bootstrap" style="width: 101px;">
+						<img class="media-object" src="assets/img/bootstrap.png" alt="Bootstrap" style="width: 101px;">
 					</a>
 				</div>
 			</div>
@@ -288,22 +288,22 @@
 				<!-- <h3 class="text-center" style="text-decoration:underline; margin-bottom:35px;">Systems</h3> -->
 				<div class="col-md-6">
 					<a href="http://www.ansible.com/">
-						<img class="media-object" src="/static/landing/img/ansible.png" alt="Ansible" style="width: 101px;">
+						<img class="media-object" src="assets/img/ansible.png" alt="Ansible" style="width: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6">
 					<a href="https://git-scm.com/">
-						<img class="media-object" src="/static/landing/img/git.png" alt="Git" style="width: 101px;">
+						<img class="media-object" src="assets/img/git.png" alt="Git" style="width: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="margin-top:20px;">
 					<a href="https://www.mongodb.org/">
-						<img class="media-object" src="/static/landing/img/mongodb.png" alt="MongoDB" style="width: 101px;">
+						<img class="media-object" src="assets/img/mongodb.png" alt="MongoDB" style="width: 101px;">
 					</a>
 				</div>
 				<div class="col-md-6" style="margin-top:20px;">
 					<a href="https://www.elastic.co/">
-						<img class="media-object" src="/static/landing/img/elastic_search.png" alt="Elasticsearch" style="width: 101px;">
+						<img class="media-object" src="assets/img/elastic_search.png" alt="Elasticsearch" style="width: 101px;">
 					</a>
 				</div>
 			</div>
