--- a/app/static_views/about.html
+++ b/app/static_views/about.html
@@ -232,6 +232,24 @@
 						</p>
 					</div>
 				</div>
+
+				<hr>
+
+				<div class="row">
+					<div class="pull-left col-md-6">
+						<a href="https://www.mi3security.com/" target="_blank" class="text-info">
+							<img src="assets/img/mi3security_large.png" alt="Mi3Security" class="" style="display:block; margin:auto;">
+						</a>
+					</div>
+					<div class="pull-right col-md-6">
+						<h3 class="pt0 mt0">
+							<a href="https://www.mi3security.com/">MI3 Security</a>
+						</h3>
+						<p>
+							Lorem ipsum here
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
