--- a/app/static_views/about.html
+++ b/app/static_views/about.html
@@ -246,7 +246,7 @@
 							<a href="https://www.mi3security.com/">MI3 Security</a>
 						</h3>
 						<p>
-							Lorem ipsum here
+							<a href="https://www.mi3security.com/">Mi3 Security</a> is the leader in intelligence-driven <strong>mobile app security</strong>. The company’s SaaS solutions offer unmatched, comprehensive analysis of <strong>Security</strong> and <strong>Privacy</strong> risks for iOS and Android applications. Mi3Security employees a patent-pending risk analysis platform that continually assesses app contents, the context surrounding the app, and code intentions to <strong>predict risk</strong> and quickly declare an app In or Out™ of compliance.
 						</p>
 					</div>
 				</div>
