Minor fix on link

--- a/app/apks/apk.main.html
+++ b/app/apks/apk.main.html
@@ -148,7 +148,7 @@
 						<td align="center">
 							<div>Powered by</div>
 							<div>
-								<a href="">
+								<a href="https://www.mi3security.com/" target="_blank">
 									<img src="assets/img/mi3_security_logo.png" alt="" class="img-responsive">
 								</a>
 							</div>
