mi3 link changed

--- a/app/apks/apk.main.html
+++ b/app/apks/apk.main.html
@@ -148,7 +148,7 @@
 						<td align="center">
 							<div>Powered by</div>
 							<div>
-								<a href="http://threatcenter.mi3security.com/" target="_blank">
+								<a ng-href="https://threatcenter.mi3security.com/?md5={{ apk.md5 }}" target="_blank">
 									<img src="assets/img/mi3_security_logo.png" alt="" class="img-responsive">
 								</a>
 							</div>
