Update settings.notifications.html (#5)
Minor typo fixes

--- a/app/settings/settings.notifications.html
+++ b/app/settings/settings.notifications.html
@@ -17,7 +17,7 @@
 
 			<div class="checkbox mt0">
 				<label>
-					<input type="checkbox" ng-model="settings.web_vote_against"> An user votes the opposite than me
+					<input type="checkbox" ng-model="settings.web_vote_against"> A user votes the opposite than me
 				</label>
 			</div>
 
@@ -29,13 +29,13 @@
 
 			<div class="checkbox mt0">
 				<label>
-					<input type="checkbox" ng-model="settings.web_user_commented"> An user comment where I commented before.
+					<input type="checkbox" ng-model="settings.web_user_commented"> A user comment where I commented before.
 				</label>
 			</div>
 
 			<div class="checkbox mt0">
 				<label>
-					<input type="checkbox" ng-model="settings.web_user_follow"> An user starts following me.
+					<input type="checkbox" ng-model="settings.web_user_follow"> A user starts following me.
 				</label>
 			</div>
 
@@ -53,7 +53,7 @@
 
 			<div class="checkbox mt0">
 				<label>
-					<input type="checkbox" ng-model="settings.email_vote_against"> An user votes the opposite than me
+					<input type="checkbox" ng-model="settings.email_vote_against"> A user votes the opposite than me
 				</label>
 			</div>
 
@@ -65,19 +65,19 @@
 
 			<div class="checkbox mt0">
 				<label>
-					<input type="checkbox" ng-model="settings.email_user_commented"> An user comment where I commented before.
+					<input type="checkbox" ng-model="settings.email_user_commented"> A user comment where I commented before.
 				</label>
 			</div>
 
 			<div class="checkbox mt0">
 				<label>
-					<input type="checkbox" ng-model="settings.email_user_follow"> An user starts following me.
+					<input type="checkbox" ng-model="settings.email_user_follow"> A user starts following me.
 				</label>
 			</div>
 
 			<div class="clearfix"></div>
 			
-			<uib-alert type="success" class="col-md-6 mt" ng-show="successAlert" close="closeAlert()">Settings update correctly</uib-alert>
+			<uib-alert type="success" class="col-md-6 mt" ng-show="successAlert" close="closeAlert()">Settings updated correctly</uib-alert>
 			
 			<div class="clearfix"></div>
 
