angular assets are not compressed on prod (#8)

--- a/index_prod.html
+++ b/index_prod.html
@@ -48,7 +48,13 @@
     <script charset="utf-8" src="//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.8.0/loading-bar.min.js"></script>
 
     <!-- Angular assets -->
-    <script src="compiled/angular-assets.min.js"></script>
+    <script src="assets/js/ui-codemirror.js"></script>
+    <script src="assets/js/ui-bootstrap.min.js"></script>
+    <script src="assets/js/angular-qr.min.js"></script>
+    <script src="assets/js/angular-ui-router.min.js"></script>
+    <script src="assets/js/angular-file-upload-all.min.js"></script>
+    <script src="assets/js/angular-moment.min.js"></script>
+    <script src="assets/js/mentio.min.js"></script>
 
     <!-- App -->
     <script src="compiled/app.min.js"></script>
