Update login.html (#7)
"Remember me" checked but not required

--- a/app/signinup/login.html
+++ b/app/signinup/login.html
@@ -51,7 +51,7 @@
 
                 <div class="checkbox mt-xl">
                     <label class="pull-left">
-                        <input type="checkbox" ng-model="remember" required> Remember me
+                        <input type="checkbox" ng-model="remember" checked> Remember me
                     </label>
 
                     <label class="pull-right">
