Added analytic events

--- a/app/sidebar.html
+++ b/app/sidebar.html
@@ -25,13 +25,13 @@
             <span>Menu</span>
          </li>
          <li ng-class="{'active': $root.section == 'dashboard'}">
-            <a title="Dashboard" href="/">
+            <a title="Dashboard" href="/" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Dashboard');">
                <em class="fa fa-dashboard"></em>
                <span>Dashboard</span>
             </a>
          </li>
          <li ng-class="{'active': $root.section == 'rulesets'}" ng-init="$root.rulesets_shown = false;" class="rulesets-menu" ng-show="$root.user.username">
-            <a title="Rulesets" ng-href="" ng-click="$root.rulesets_shown = !$root.rulesets_shown;">
+            <a title="Rulesets" ng-href="" ng-click="$root.rulesets_shown = !$root.rulesets_shown;" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Rulesets');">
                <em class="fa fa-code"></em>
                <span>
                   Rulesets
@@ -41,34 +41,34 @@
             </a>
             <ul class="nav sidebar-subnav" collapse="!$root.rulesets_shown">
                <li class="sidebar-subvan-header" ng-class="{'active': $root.sidebar_sub_section == 'community_rulesets'}">
-                  <a href="/rulesets">Community Rulesets</a>
+                  <a href="/rulesets" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Community Rulesets');">Community Rulesets</a>
                </li>
                <li class="sidebar-subvan-header" ng-class="{'active': $root.sidebar_sub_section == 'my_rulesets', 'disabled':$root.user.anon}">
-                  <a href="/my_rulesets">My Rulesets</a>
+                  <a href="/my_rulesets" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'My Rulesets');">My Rulesets</a>
                </li>
             </ul>
          </li>
          <li ng-class="{'active': $root.section == 'rulesets'}" ng-show="$root.user.anon">
-            <a href="/rulesets">
+            <a href="/rulesets" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Rulesets');">
                <em class="fa fa-code"></em>
                <span>Community Rulesets</span>
             </a>
          </li>
 
          <li ng-class="{'active': $root.section == 'apks'}">
-            <a title="APKs" href="/apks">
+            <a title="APKs" href="/apks" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'APKs');">
                <em class="fa fa-list"></em>
                <span>APKs</span>
             </a>
          </li>
          <li ng-class="{'active': $root.section == 'ranking'}">
-            <a title="Ranking" href="/ranking">
+            <a title="Ranking" href="/ranking" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Ranking');">
                <em class="fa fa-trophy"></em>
                <span>Ranking</span>
             </a>
          </li>
          <li ng-class="{'active': $root.section == 'notifications'}" ng-show="$root.user.username">
-            <a title="Notifications" href="/notifications">
+            <a title="Notifications" href="/notifications" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Notifications');">
                <em class="fa fa-exclamation-circle"></em>
                <span>Notifications</span>
                <div class="label label-danger pull-right" ng-show="$root.unreadNotifications != 0">{{ $root.unreadNotifications }}</div>
@@ -81,37 +81,37 @@
             <span>Links</span>
          </li>
          <li ng-class="{'active': $root.section == 'about'}">
-            <a title="About" href="/about">
+            <a title="About" href="/about" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'About');">
                <em class="fa fa-info-circle"></em>
                <span>About Koodous</span>
             </a>
          </li>
          <li ng-class="{'active': $root.section == 'press'}">
-            <a title="Press" href="/press">
+            <a title="Press" href="/press" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Press');">
                <em class="fa fa-newspaper-o"></em>
                <span>Press</span>
             </a>
          </li>
          <li>
-            <a title="Documentation" href="http://docs.koodous.com" target="_blank">
+            <a title="Documentation" href="http://docs.koodous.com" target="_blank" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Documentation');">
                <em class="fa fa-book"></em>
                <span>Documentation</span>
             </a>
          </li>
          <li>
-            <a title="Twitter" href="http://twitter.com/koodous_project" target="_blank">
+            <a title="Twitter" href="http://twitter.com/koodous_project" target="_blank" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Twitter');">
                <em class="fa fa-twitter"></em>
                <span>Twitter</span>
             </a>
          </li>
          <li>
-            <a title="Blog" href="http://blog.koodous.com" target="_blank">
+            <a title="Blog" href="http://blog.koodous.com" target="_blank" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Blog');">
                <em class="fa fa-bookmark"></em>
                <span>Blog</span>
             </a>
          </li>
          <li>
-            <a title="Blog" href="mailto:info@koodous.com">
+            <a title="Blog" href="mailto:info@koodous.com" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'mailto info koodus.com');">
                <em class="fa fa-envelope"></em>
                <span>info@koodous.com</span>
             </a>
@@ -122,10 +122,10 @@
 </div>
 <ul class="nav sidebar-subnav nav-floating rulesets-sub-menu">
    <li class="sidebar-subvan-header" ng-class="{'active': $root.sidebar_sub_section == 'community_rulesets'}">
-      <a href="/rulesets">Community Rulesets</a>
+      <a href="/rulesets" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'Community Rulesets');">Community Rulesets</a>
    </li>
    <li class="sidebar-subvan-header" ng-class="{'active': $root.sidebar_sub_section == 'my_rulesets','disabled':$root.user.anon}">
-      <a href="/my_rulesets">My Rulesets</a>
+      <a href="/my_rulesets" onclick="ga('send', 'event', 'Koodous', 'Sidebar', 'My Rulesets');">My Rulesets</a>
    </li>
 </ul>
 <!-- END Sidebar (left)
